FIX: optimized gaps styles for content column

--- a/src/styles/components/_grid.scss
+++ b/src/styles/components/_grid.scss
@@ -52,7 +52,8 @@
   flex: 0 1 100%;
 
   @include media-breakpoint-up($desktop-breakpoint) {
-    padding: 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     flex: 1 1 auto;
     min-width: 0;
   }
